@@ -1,20 +1,18 @@
 package ru.penzgtu.tasks;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
+import java.util.Set;
 
 public class DeletionOfAllDuplicates implements TaskRunnable {
     @Override
     public void run() {
         System.out.println("[?] Deletion of all duplicates");
-        List<Integer> list = new LinkedList<>(Arrays.asList(1, 1, 2));
-        System.out.println("List: " + list);
-        System.out.println("Result" + new HashSet<>(list).stream().toList());
+        List<Integer> list = List.of(1, 1, 2);
+        System.out.printf("List: %s. \n", list);
+        System.out.printf("Result: %s. \n", Set.copyOf(list));
 
-        list = new LinkedList<>(Arrays.asList(1, 1, 2, 3, 3));
-        System.out.println("List: " + list);
-        System.out.println("Result" + new HashSet<>(list).stream().toList());
+        list = List.of(1, 1, 2, 3, 3);
+        System.out.printf("List: %s. \n", list);
+        System.out.printf("Result: %s. \n", Set.copyOf(list));
     }
 }
