@@ -1,24 +1,22 @@
 package ru.penzgtu.tasks;
 
-import java.util.Arrays;
-import java.util.LinkedList;
 import java.util.List;
 
 public class ObtainingUniqueListItem implements TaskRunnable {
     @Override
     public void run() {
         System.out.println("[?] Obtaining a unique list item");
-        List<Integer> list = new LinkedList<>(Arrays.asList(2, 2, 1));
-        System.out.println("List: " + list);
-        System.out.println("Result: " + getUniqueListItem(list));
+        List<Integer> list = List.of(2, 2, 1);
+        System.out.printf("List: %s. \n", list);
+        System.out.printf("Result: %s. \n", getUniqueListItem(list));
 
-        list = new LinkedList<>(Arrays.asList(4, 1, 2, 1 ,2));
-        System.out.println("List: " + list);
-        System.out.println("Result: " + getUniqueListItem(list));
+        list = List.of(4, 1, 2, 1 ,2);
+        System.out.printf("List: %s. \n", list);
+        System.out.printf("Result: %s. \n", getUniqueListItem(list));
 
-        list = new LinkedList<>(List.of(1));
-        System.out.println("List: " + list);
-        System.out.println("Result: " + getUniqueListItem(list));
+        list = List.of(1);
+        System.out.printf("List: %s. \n", list);
+        System.out.printf("Result: %s. \n", getUniqueListItem(list));
     }
 
     /**
